--- a/package.json
+++ b/package.json
@@ -6,27 +6,35 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^7.3.1",
     "core-js": "^3.25.3",
+    "jest-environment-jsdom": "^29.3.1",
     "nuxt": "^2.15.8",
     "sass": "^1.57.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.14"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
+    "@vue/test-utils": "1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "fibers": "^5.0.3",
+    "jest": "^29.3.1",
     "node-sass": "^8.0.0",
     "prettier": "^2.8.3",
-    "sass-loader": "^10.4.1"
+    "sass-loader": "^10.4.1",
+    "vue-jest": "^3.0.7"
   }
 }
