--- a/package.json
+++ b/package.json
@@ -3,38 +3,38 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "test:unit": "vue-cli-service test:unit",
+    "dev": "nuxt",
     "generate": "nuxt generate",
+    "start": "nuxt start",
     "test": "jest"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^7.3.1",
     "core-js": "^3.25.3",
-    "jest-environment-jsdom": "^29.3.1",
     "nuxt": "^2.15.8",
     "sass": "^1.57.1",
     "vue": "^2.7.10",
-    "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.14"
+    "vue-server-renderer": "^2.7.10"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
-    "@vue/test-utils": "1",
-    "babel-core": "^7.0.0-bridge.0",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/test-utils": "^1.3.3",
+    "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^29.3.1",
+    "babel-jest": "^27.0.6",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "fibers": "^5.0.3",
-    "jest": "^29.3.1",
+    "jest": "^27.0.5",
     "node-sass": "^8.0.0",
     "prettier": "^2.8.3",
-    "sass-loader": "^10.4.1",
-    "vue-jest": "^3.0.7"
+    "regenerator-runtime": "^0.13.11",
+    "sass-loader": "^10.4.1"
   }
 }
