--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt",
     "generate": "nuxt generate",
     "start": "nuxt start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"**/*.{js,mjs}\""
   },
   "dependencies": {
     "@nuxtjs/i18n": "^7.3.1",
@@ -24,17 +25,11 @@
     "@vue/test-utils": "^1.3.3",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "fibers": "^5.0.3",
     "jest": "^26.6.3",
     "node-sass": "^8.0.0",
-    "prettier": "^2.8.3",
     "regenerator-runtime": "^0.13.11",
     "sass-loader": "^10.4.1",
     "vue-jest": "^3.0.7"
