--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "^7.3.1",
     "core-js": "^3.25.3",
+    "date-fns": "^2.29.3",
     "nuxt": "^2.15.8",
     "sass": "^1.57.1",
     "vue": "^2.7.10",
