--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "start": "nuxt start",
     "test": "jest",
-    "lint": "eslint \"**/*.{js,mjs}\""
+    "lint": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
     "@nuxtjs/i18n": "^7.3.1",
@@ -20,13 +20,22 @@
     "vue-server-renderer": "^2.7.10"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.14.7",
+    "@nuxtjs/eslint-config": "^6.0.1",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.12.1",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "prettier": "^2.3.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "@testing-library/vue": "^5.8.3",
     "@vue/test-utils": "^1.3.3",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
-    "eslint-plugin-vue": "^9.9.0",
     "fibers": "^5.0.3",
     "jest": "^26.6.3",
     "node-sass": "^8.0.0",
