fix: i18n setup refactor

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "nuxt-i18n": "^6.28.1",
     "sass": "^1.57.1",
     "vue": "^2.7.10",
-    "vue-i18n": "^7.3.2",
     "vue-server-renderer": "^2.7.10"
   },
   "devDependencies": {
