--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
     "sass": "^1.57.1",
+    "uuidv4": "^6.2.13",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10"
   },
