Refactor: refactor pagination
use svg loader instead of img tag

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
+    "nuxt-svg-loader": "^1.2.0",
     "sass": "^1.57.1",
     "uuidv4": "^6.2.13",
     "vue": "^2.7.10",
