--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt-i18n": "^6.28.1",
     "nuxt-svg-loader": "^1.2.0",
     "sass": "^1.57.1",
+    "sweetalert": "^2.1.2",
     "uuidv4": "^6.2.13",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10"
