--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "core-js": "^3.25.3",
     "date-fns": "^2.29.3",
+    "jest-transform-stub": "^2.0.0",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
