--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
     "core-js": "^3.25.3",
     "date-fns": "^2.29.3",
     "jest-transform-stub": "^2.0.0",
@@ -26,6 +27,7 @@
     "sweetalert": "^2.1.2",
     "uuidv4": "^6.2.13",
     "vue": "^2.7.10",
+    "vue-i18n": "8",
     "vue-server-renderer": "^2.7.10"
   },
   "devDependencies": {
@@ -37,7 +39,7 @@
     "@vue/test-utils": "^1.3.3",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.4.2",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
