--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@vue/test-utils": "^1.3.3",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^",
+    "babel-jest": "^29.4.2",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
